--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies { //The first two were added because one of the mods below them (I 
     compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.98:dev'
     compile 'com.mod-buildcraft:buildcraft:6.0.17:dev'
     compile 'li.cil.oc:OpenComputers:MC1.7.10-1.3.2.43'
+		
+	// Remember to use the non-obfuscated dev versions!
+	compile files('lib/CoFHCore-[1.7.10]3.0.0B2-dev-24.jar');		// CoFHCore - general libraries
+	compile files('lib/CoFHLib-[1.7.10]1.0.0B2-dev-18.jar');		// CoFHLib - more general libraries
 }
 
 processResources
