--- a/build.gradle
+++ b/build.gradle
@@ -42,8 +42,8 @@ dependencies { //The first two were added because one of the mods below them (I 
     compile 'li.cil.oc:OpenComputers:MC1.7.10-1.3.2.43'
 		
 	// Remember to use the non-obfuscated dev versions!
-	compile files('lib/CoFHCore-[1.7.10]3.0.0B2-dev-24.jar');		// CoFHCore - general libraries
-	compile files('lib/CoFHLib-[1.7.10]1.0.0B2-dev-18.jar');		// CoFHLib - more general libraries
+	compile files('lib/CoFHCore-[1.7.10]3.0.0B3-dev-26.jar');		// CoFHCore - general libraries
+	compile fileTree(dir: 'BeefCore/src/main/java', include: '*.java');
 }
 
 processResources
