--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ dependencies { //The first two were added because one of the mods below them (I 
 		
 	// Remember to use the non-obfuscated dev versions!
 	compile files('lib/CoFHCore-[1.7.10]3.0.0B3-dev-26.jar');		// CoFHCore - general libraries
-	compile fileTree(dir: 'BeefCore/src/main/java', include: '*.java');
+	compile project(':BeefCore');
 }
 
 processResources
