--- a/build.gradle
+++ b/build.gradle
@@ -38,10 +38,17 @@ repositories {
         name = "OpenComputers"
         url = "http://maven.cil.li/"
     }
+    repositories {
+        maven {
+            name = "codechicken"
+            url = "http://chickenbones.net/maven"
+        }
+    }
 }
 
-dependencies { //The first two were added because one of the mods below them (I suspect AE2) was auto-downloading the 1.7.2 versions. Hopefully can be fixed in the future and can remove these.
-    compile 'codechicken:CodeChickenLib:1.7.10-1.1.1.98:dev'
+dependencies {
+    compile 'codechicken:CodeChickenCore:1.7.10-1.0.3.25:dev'
+    compile 'codechicken:NotEnoughItems:1.7.10-1.0.3.51:dev'
     compile 'com.mod-buildcraft:buildcraft:6.0.17:dev'
     compile 'li.cil.oc:OpenComputers:MC1.7.10-1.3.2.43'
 		
