--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     compile 'codechicken:CodeChickenCore:1.7.10-1.0.4.29:dev'
     compile 'codechicken:NotEnoughItems:1.7.10-1.0.3.64:dev'
     compile 'com.mod-buildcraft:buildcraft:6.0.18:dev'
-    compile 'li.cil.oc:OpenComputers:MC1.7.10-1.4.0.203-dev'
+    compile 'li.cil.oc:OpenComputers:MC1.7.10-1.4.0.+:api'
 		
 	// Remember to use the non-obfuscated dev versions!
 	compile files('lib/CoFHCore-[1.7.10]3.0.0B6-dev-32.jar');		// CoFHCore - general libraries
